--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "partytracker",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +16,11 @@
   },
   "homepage": "https://github.com/KatjaDa/PartyTracker#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
+    "multer": "^1.4.4",
     "npm": "^8.6.0"
-  }
+  },
+  "description": ""
 }
