--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
     "multer": "^1.4.4",
+    "mysql": "^2.18.1",
     "npm": "^8.6.0"
   },
-  "devDependencies": {},
   "description": ""
 }
