added startup guide

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "description": "",
   "devDependencies": {
-    "concurrently": "^7.1.0"
+    "concurrently": "^7.1.0",
+    "nodemon": "^2.0.15"
   }
 }
