--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -6,10 +6,10 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
-
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "leaflet": "^1.8.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
